tests/errors/compiler/expected_end/no_end_in_cicle.c
void main()
{
	while (1 < 0)
	{
		print("WTF?");

}
